# xwa

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
config/: functions.json  ghidra_func_bounds.csv  pe_analysis.json
docs/: IDA_ANALYSIS_HANDOFF.md
src/game/: com_mocks.c  com_mocks.h  imports.c  main.c
src/game/recomp/: recomp_types.h
src/hal/: d3d11_renderer.c  d3d11_renderer.h  shaders.h
tools/: __init__.py  __main__.py  disasm.py  dump_memory.py  fix_clobber.py  fix_dec_cond.py  fix_overextended.py  fix_test_cond.py  gen_bridges.py  generate.py  lifter.py  pe_analyze.py  regen_0000.py  relift_func.py  translator.py
tools/recomp/: __init__.py
